# luau-viewer

./: .gitignore  .gitmodules  README.md  pyproject.toml  todo_features.md
scripts/: generate_luau_parser.py
src/luau_viewer/application/: control_flow.py  smell_detection.py  use_cases.py
src/luau_viewer/domain/: control_flow.py  errors.py  events.py  model.py  ports.py
src/luau_viewer/infrastructure/: smell_detection.py  system.py
src/luau_viewer/infrastructure/antlr/: control_flow_extractor.py  error_listener.py  parser_adapter.py  runtime.py
src/luau_viewer/infrastructure/filesystem/: source_repository.py
src/luau_viewer/infrastructure/rendering/: nassi_html_renderer.py
src/luau_viewer/presentation/cli/: main.py
tests/: test_domain_model.py  test_nassi_diagrams.py  test_parse_use_cases.py  test_roblox_smells_e2e.py  test_smell_detection.py
tests/fixtures/: control_flow.luau  invalid.luau  valid.luau
tests/fixtures/roblox_smells/: clean_module.luau  edge_cases.luau  performance.luau  reliability.luau  security.luau  style.luau
tests/fixtures/smells/: smells.luau
